# CPP-Utag

./: .gitignore  CMakeLists.txt  README.md  build.sh  log.txt
3dparty/: CMakeLists.txt
app/: CMakeLists.txt  main.cpp  res1.qrc
app/resources/: res1.qrc  resources.qrc
app/resources/tmp/: silence-44-s.flac
app/src/: CMakeLists.txt  SoundPlayer.cpp  SoundPlayer.h  dialog.cpp  dialog.h  dialog.ui  logger.cpp  logger.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  musictablemodel.cpp  musictablemodel.h  searcher.cpp  searcher.h  soundPlayer.cpp  soundPlayer.h  sound_tags.cpp  sound_tags.h  tableviewer.cpp  tableviewer.h  tag_functions.cpp  tag_functions.h
